--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
       <footer>
            <a href="https://github.com/NiuFuyu855">NiuFuyu's Github个人主页</p></a>
         
-        <p>&copy;2022 ZGQ Inc. <span>All rights reserved</span>.</p>
+        <p>&copy;2022 <a href="https://off.cx">Niute Fony</a> Inc. <span>All rights reserved</span>.</p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
